Fix all not parsing related test